--- a/style.css
+++ b/style.css
@@ -8,13 +8,22 @@ p, h3{
     padding-left: 50px;
     padding-right: 50px;
 }
+Header H1{
+    text-align: center;
+    margin: auto;
+    padding-right: 110px;
+    }
 Header{
+    display: grid;
+    grid-template-columns: auto auto auto;
     border: 4px solid darkslategray;
     background-color: darkslategrey;
 }
-Header H1{
-text-align: center;
-    margin: auto;
+Header img{
+    text-align: left;
+}
+Header P{
+    text-align: right;
 }
 .subheadingparagraph{
     padding-left: 50px;
